deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot
  labels:
    app: springboot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
        - name: springboot
          image: ayoyinka/springboot:1
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: springboot
spec:
  type: LoadBalancer
  selector:
    app: springboot
  ports:
    - port: 9000         # external port
      targetPort: 8080   # port in container
